<resources>
    <string name="app_name">My App</string>
    <string name="score">Score: %s</string>
    <string name="timeleft">Timeleft: %s</string>
    <string name="tab">Tab</string>
    <string name="game_over_message">Times up! Your score was: %s</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_character_list">CharacterListActivity</string>
    <string name="desc_character">To use these attributes, add the tools namespace to the root element of each XML file where you would like to use them, as shown here.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="empty_desc"> </string>
    <string name="singapore">Singapore</string>
    <string name="upload_button">Upload</string>
    <string name="discard">Discard</string>
    <string name="singapore_desc">The Layout Editor uses constraints to determine the position of a UI element within the layout. A constraint represents a connection or alignment to another view, the parent layout, or an invisible guideline. You can create the constraints manually, as we show later, or automatically using the Autoconnect tool.</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="plus_slash_minus">+/-</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="dot">.</string>
    <string name="times">X</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="button_calculator">Calculator</string>
    <string name="button_character">Character</string>
    <string name="button_intent">Intent</string>
    <string name="button_time">Time</string>

</resources>
