<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorYellowCal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:freezesText="true"
            android:text="@string/zero"
            android:textColor="@android:color/white"
            android:textSize="72sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/ac"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/plus_slash_minus"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/percent"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorOrangeCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/division"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_selector"
            android:text="@string/seven"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/eight"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/nine"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorOrangeCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/times"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/four"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/five"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/six"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorOrangeCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/minus"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/one"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/two"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/three"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorOrangeCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="2"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/zero"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrayCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/dot"
            android:textColor="@android:color/background_dark"
            android:textSize="28sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorOrangeCal"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/equals"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

    </LinearLayout>

</LinearLayout>